--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <img src="1.jpg"alt="My Logo">
         <h2>Welcome to my Website</h2>
-        <p> If you would like to know wich places to visit in Costa Rica this is the perfect website</p>
+        <p> If you would like to know wich places to visit in Costa Rica this is the perfect website.</p>
         <nav>
             <a href="index.html">Home</a>
             <a href="Assignment1.html">Assigments</a>
@@ -20,6 +20,17 @@
             <a href="#">Contact</a>
         </nav>
     </header>
+
+    <main>
+        <section>
+            <article>
+                <header>
+                    <h3>Website Recommendation</h3>
+                    <p> Instituto Costarricense de Turismo, last modification 13/9/2024</p>
+                </header>
+            </article>
+        </section>
+    </main>
 </body>
 
 </html>
