--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="Assignment1.html">Assigments</a>
-            <a href="#">About Me</a>
+            <a href="About Me.html">About Me</a>
             <a href="#">Form</a>
             <a href="#">Contact</a>
         </nav>
