--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="Assignment1.html">Assigments</a>
             <a href="About Me.html">About Me</a>
             <a href="#">Form</a>
-            <a href="#">Contact</a>
+            <a href="Contact.html">Contact</a>
         </nav>
     </header>
 
