--- a/index.html
+++ b/index.html
@@ -15,9 +15,21 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="Assignment1.html">Assigments</a>
+          <select onchange="la(this.value)">
+            <option desabled selected>Assignments</option>
+            <option value="Assignment1.html">Assignment1</option>
+            <option value="Assignment2.html">Assignment2</option>
+            <script>
+                function la(src)
+                {
+                    window.location=src;
+                }
+            </script>
+          </select>
+
+            
             <a href="About Me.html">About Me</a>
-            <a href="#">Form</a>
-            <a href="Contact.html">Contact</a>
+            <a href="Contact2.html">Contact</a>
         </nav>
     </header>
 
