--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </script>
           </select>
 
-            
+            <a href="Forms.html">Forms</a>
             <a href="About Me.html">About Me</a>
             <a href="Contact2.html">Contact</a>
         </nav>
