--- a/Assignment1.html
+++ b/Assignment1.html
@@ -1,4 +1,30 @@
 <DOCTYPE html>
+</head>
+<body>
+    <header>
+        <img src="1.jpg"alt="My Logo">
+        <h2>Welcome to my Website</h2>
+        <p> If you would like to know which places to visit in Costa Rica this is the perfect website.</p>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="Assignment1.html"></a>
+          <select onchange="la(this.value)">
+            <option desabled selected>Assignments</option>
+            <option value="Assignment1.html">Assignment1</option>
+            <option value="Assignment2.html">Assignment2</option>
+            <script>
+                function la(src)
+                {
+                    window.location=src;
+                }
+            </script>
+          </select>
+
+            <a href="Forms.html">Forms</a>
+            <a href="About Me.html">About Me</a>
+            <a href="Contact2.html">Contact</a>
+        </nav>
+    </header>
     <HTml>
     <header></header>
     <title></title>
