--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p> If you would like to know which places to visit in Costa Rica this is the perfect website.</p>
         <nav>
             <a href="index.html">Home</a>
-            <a href="Assignment1.html">Assigments</a>
+            <a href="Assignment1.html"></a>
           <select onchange="la(this.value)">
             <option desabled selected>Assignments</option>
             <option value="Assignment1.html">Assignment1</option>
