--- a/Contact2.html
+++ b/Contact2.html
@@ -26,7 +26,7 @@
                     }
                 </script>
               </select>
-            <a href="#">Form</a>
+            <a href="Forms.html">Form</a>
             <a href="Contact.html">Contact</a>
         </nav>
     </header>
