--- a/Contact2.html
+++ b/Contact2.html
@@ -66,5 +66,11 @@
         </section>
     </main>
 </body>
+<style>
+        img{width: 300px;px;
+        height: 350px;}
+        header{text-align: center;}
+        </style>
+
 
 </html>
