--- a/Forms.html
+++ b/Forms.html
@@ -49,10 +49,16 @@
             <option value="Package">Package</option>
 
         </select>
+        <br>
+        <br>
         <input type="submit" value="Submit">
     <p>Full Package includes: Housing,Car and acces to private beach.</p>
       <p>  Half Package includes: Housing and car.</p>
        <p> Package includes: Housing.</p>
-
+       <style>
+       img{width: 300px;px;
+        height: 350px;}
+        header{text-align: center;}
+         </style>
 </body>
 </html>
