--- a/About Me.html
+++ b/About Me.html
@@ -26,14 +26,26 @@
         </nav>
     </header>
 <html>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <head>
         <hi style="font-size: 60px;">My Experience</hi>
         <p>As a Costa Rican citizen I really recommend people to go there. For me Costa Rica has unique things like the social life and the beaches. It has been a complete nightmare coming to the US, not because thay are mean, just because is a different culture and enviroment. Costa Rica has so much things to share around the world, but I dont see many people going outside of America. Definetly my favorite experience will be my 3 best friends that I made since I was 6, and the New years parties are the best, I dont understand how people dont want to go here.The new years parties besides, is for poeple of all ages like I went last year with my friends and besides my parents were going with their friends. </p>
         <body>
-            <video width="600" controls>
+            <video width="500" height="500" controls>
                 <source src="Costa Rica_ A Little Piece of Paradise _ National Geographic (1).mp4">
+                <style>
+                </style>
+
                 
             </video>
         </body>
     </head>
+    <style>
+        img{width: 300px;px;
+        height: 350px;}
+        header{text-align: center;}
 </html>
