--- a/index.html
+++ b/index.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
+
     <meta charset="utf-8">
     <tittle></tittle>
     <h1>Costa Rica Blog</h1>
+    </style>
 
     
 </head>
-<body>
+    
     <header>
         <img src="1.jpg"alt="My Logo">
+        <style>
+            img{width: 300px;px;
+            height: 350px;}
+            header{text-align: center;}
+            h1{text-align: center;}
+        body{background-color: white;color: black;}
+        h1 {color: white; text-align: center;}
+        p{text-align: center;}
+        img{text-align: center;}</style>
+        <body>
         <h2>Welcome to my Website</h2>
         <p> If you would like to know which places to visit in Costa Rica this is the perfect website.</p>
         <nav>
