--- a/Secondpage.html
+++ b/Secondpage.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -35,16 +36,23 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <div class="card-container">
             <div class="card">
-                <img src="arenal-volcano-costa-rica-1680x1063.jpg">
+                <img src="Paquete.jpg">
                 <div class="card-content">
                     <h3> Tamarindo</h3>
-                    <p>Tamarindo is a prime spot for surfing and sportfishing, diving and sunning. Nesting leatherback turtles do their thing along the beaches from October to May and, for some nesting of your own, gorgeous beach houses, B&Bs and luxury hotels line the sunny sands. Shopping and dining options are superb and plentiful, perfect for sampling the true flavors of Costa Rica.</p>
-                    <a href="Secondpage.html" class="btn">Package</a>
+                    <ul>
+                        <li>Housing</li>
+                        <li>Plane ticket</li>
+                        <br>
+                        <br>
+                        <br>
+                
+                    </ul>
+                    <a href="package.html/package.html" class="btn">More details</a>
 
                 </div>
             </div>
             <div class="card">
-                <img src="Costa rica background.jpg">
+                <img src="Paquete.jpg">
                 <div class="card-content">
                     <h3>Jaco</h3>
                     <p>The tiny hamlet of Jaco is located in the Pacific Coast province of Puntarenas, Costa Rica. It’s the ultimate hideaway for sun seekers and active travelers, with cinnamon-hued volcanic-sand beaches, lush green rain forest and verdant mountains. Surfers flock here from around the world, but families, and honeymooners also find much to love, thanks to the multitude of beaches, outdoor activities, dining, shopping and nightlife.</p>
@@ -52,7 +60,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="Costa Rica main.webp">
+                <img src="Paquete.jpg">
                 <div class="card-content">
                     <h3>Santa Teresa</h3>
                     <p>Far on the tip of Costa Rica’s Nicoya Peninsula, away from airports and city lights, is Santa Teresa. And while this jungle-backed beach town is remote, it is anything but dull. Hip restaurants, shared workspaces, beach parties, and a growing population of young expats make it feel like the next big trend. In this post, we’ll tell you why Santa Teresa has stolen so many hearts and help you plan a visit.</p>
