--- a/Forms.html
+++ b/Forms.html
@@ -1,64 +1,125 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Costa Rica Blog - Feedback Form</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" href="1.jpg" type="image/icon type">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        /* Styling for header */
+        .header {
+            width: 100%;
+            height: 55px;
+            background-color: #101010;
+            color: white;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 20px;
+        }
+        .logo_container h1 {
+            font-family: 'Courier New', Courier, monospace;
+            font-weight: 800;
+        }
+        .navigation {
+            display: flex;
+        }
+        .navigation a {
+            padding: 10px;
+            color: white;
+            font-family: 'Courier New', Courier, monospace;
+            text-decoration: none;
+        }
+        .navigation a:hover {
+            color: lightgreen;
+        }
+
+        /* Styling for form */
+        .form-container {
+            width: 60%;
+            margin: 50px auto;
+            background-color: #f4f4f4;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4);
+        }
+        .form-container h2 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .form-container label {
+            font-size: 18px;
+            margin: 10px 0;
+            display: block;
+        }
+        .form-container input, .form-container textarea {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+            font-size: 16px;
+        }
+        .form-container input[type="submit"] {
+            background-color: #333;
+            color: white;
+            border: none;
+            cursor: pointer;
+            font-size: 18px;
+        }
+        .form-container input[type="submit"]:hover {
+            background-color: lightgreen;
+        }
+
+        /* Basic styling for page */
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #eaeaea;
+            margin: 0;
+            padding: 0;
+        }
+        h1 {
+            text-align: center;
+            color: white;
+            background-color: #101010;
+            padding: 20px 0;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <img src="1.jpg"alt="My Logo">
-        <h2>Welcome to my Website</h2>
-        <p> If you would like to know which places to visit in Costa Rica this is the perfect website.</p>
-        <nav>
+
+    <!-- Header and Navigation -->
+    <div class="header">
+        <div class="logo_container">
+            <h1>Costa<span>Rica</span></h1>
+        </div>
+        <div class="navigation">
             <a href="index.html">Home</a>
-            <a href="Assignment1.html"></a>
-          <select onchange="la(this.value)">
-            <option desabled selected>Assignments</option>
-            <option value="Assignment1.html">Assignment1</option>
-            <option value="Assignment2.html">Assignment2</option>
-            <script>
-                function la(src)
-                {
-                    window.location=src;
-                }
-            </script>
-          </select>
-
             <a href="Forms.html">Forms</a>
-            <a href="About Me.html">About Me</a>
             <a href="Contact2.html">Contact</a>
-        </nav>
-    </header>
-    <head>
-        <tittle></tittle>
-    </head>
-   <h1> Where do you want to go?</h1>
-<body>
-    <form name="f1" methos="post"action="test6.php">
-        <select name="s1">
-            <option value="Tamarindo">Tamarindo</option>
-            <option value="Flamingo">Flamingo</option>
-            <option value="Jaco">Jaco</option>
+        </div>
+    </div>
 
-        </select>
-        <br>
-        <br>
+    <!-- Feedback Form -->
+    <div class="form-container">
+        <h2>Feedback on Your Trip to Costa Rica</h2>
+        <form action="#" method="post">
+            <label for="trip-experience">How was your trip?</label>
+            <textarea id="trip-experience" name="trip-experience" rows="4" required></textarea>
 
-         </form>
-    <form name="f1"method=post action="test6.php">
-        <select name="s1">
-            <option value="Full Package"> Full Package</option>
-            <option value="Half Package">Half Package</option>
-            <option value="Package">Package</option>
+            <label for="rating">Rate your travel experience (1-5):</label>
+            <input type="number" id="rating" name="rating" min="1" max="5" required>
 
-        </select>
-        <br>
-        <br>
-        <input type="submit" value="Submit">
-    <p>Full Package includes: Housing,Car and acces to private beach.</p>
-      <p>  Half Package includes: Housing and car.</p>
-       <p> Package includes: Housing.</p>
-       <style>
-       img{width: 300px;px;
-        height: 350px;}
-        header{text-align: center;}
-         </style>
+            <label for="issues">Did you encounter any issues during your trip?</label>
+            <textarea id="issues" name="issues" rows="4"></textarea>
+
+            <input type="submit" value="Submit Feedback">
+        </form>
+    </div>
+
+    <!-- Footer Section -->
+    
+
 </body>
 </html>
