--- a/thirdpgae.html
+++ b/thirdpgae.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" href="1.jpg" type="image/icon type">
 </head>
-
 <body>
     <!-- Header Section -->
     <div class="header">
@@ -15,43 +14,72 @@
             <h1>Costa<span>Rica</span></h1>
         </div>
         <ul class="navigation">
-            <a href="index.html"><li class="highlighted">Home</li></a>
-            <a href="Forms.html"><li class="highlighted">Forms</li></a>
-            <a href="Contact2.html"><li class="highlighted">Contact</li></a>
+            <a href="index.html"><li>Home</li></a>
+            <a href="Forms.html"><li>Forms</li></a>
+            <a href="Contact2.html"><li>Contact</li></a>
         </ul>
     </div>
 
     <!-- Card Section -->
     <div class="card-container">
         <div class="card">
-            <img src="arenal-volcano-costa-rica-1680x1063.jpg" alt="Tamarindo">
+            <img src="house.webp" id="houseimage">
+            <img src="images (1).jpg" id="airplaneimage">
             <div class="card-content">
-                <h3>Tamarindo</h3>
-                <p>Tamarindo is a prime spot for surfing, sportfishing, diving, and sunning. The beaches host nesting leatherback turtles from October to May. You can find gorgeous beach houses, B&Bs, and luxury hotels here. Perfect for sampling the true flavors of Costa Rica.</p>
-                <a href="thirdpgae.html" class="btn">Package</a>
+                <h3>Package</h3>
+                <ul>
+                    <li>Housing</li>
+                    <br>
+                    <li>Plane ticket</li>
+                    <br><br><br><br><br><br>
+                </ul>
+                <br>
+                <a href="package.html/package.html" class="btn">Order</a>
             </div>
         </div>
-
         <div class="card">
-            <img src="Costa rica background.jpg" alt="Jaco">
+            <img src="house.webp" id="houseimage3">
+            <img src="images (1).jpg" id="airplaneimage2">
+            <img src="CAR.avif" id="carimage">
+            <img src="private beach.jpg" id="privatebeachimage">
             <div class="card-content">
-                <h3>Jaco</h3>
-                <p>The tiny hamlet of Jaco on Costa Rica's Pacific Coast is a paradise for sun-seekers and active travelers, offering beautiful volcanic-sand beaches, lush rainforests, and verdant mountains. It's a great destination for surfers, families, and honeymooners.</p>
-                <a href="thirdpgae.html" class="btn">Package</a>
+                <h3>Premium</h3>
+                <ul>
+                    <li>Housing</li>
+                    <br>
+                    <li>Plane ticket</li>
+                    <br>
+                    <li>Car</li>
+                    <br>
+                    <li>Access to private beach</li>
+                    <br><br><br>
+                </ul>
+                <a href="" class="btn">Order</a>
             </div>
         </div>
-
         <div class="card">
-            <img src="Costa Rica main.webp" alt="Santa Teresa">
+            <img src="house.webp" id="houseimage2">
+            <img src="images (1).jpg" id="airplaneimage2">
+            <img src="CAR.avif" id="carimage2">
             <div class="card-content">
-                <h3>Santa Teresa</h3>
-                <p>Santa Teresa is located at the tip of Costa Rica's Nicoya Peninsula, offering a remote yet vibrant beach town. Known for hip restaurants, shared workspaces, beach parties, and a growing expat population, it’s a hidden gem for travelers seeking something unique.</p>
-                <a href="thirdpgae.html" class="btn">Package</a>
+                <h3>Mega Package</h3>
+                <ul>
+                    <li>Housing</li>
+                    <br>
+                    <li>Plane ticket</li>
+                    <br>
+                    <li>Car</li>
+                    <br><br><br>
+                    <br><br>
+                </ul>
+                <a href="" class="btn">Order</a>
             </div>
         </div>
     </div>
 
-    <!-- Footer Section -->
+    <script src="package.html/package.html"></script>
+
+    <!-- Footer Section (optional) -->
     <footer>
         <div class="footer-content">
             <div class="footer-column">
@@ -80,9 +108,6 @@
             <p>&copy; 2024 Costa Rica Blog. All rights reserved.</p>
         </div>
     </footer>
-
-    <!-- External JS if needed -->
-    <script src="package.html/package.html"></script>
 
     <!-- Styling -->
     <style>
@@ -113,13 +138,15 @@
         }
 
         /* Highlighted Navigation Links */
-        .navigation .highlighted {
-            background-color: black;
+        .navigation li {
+            display: inline-block;
+            padding: 10px;
             color: white;
             font-weight: bold;
+            background-color: black;
             border-radius: 5px;
         }
-        .navigation .highlighted:hover {
+        .navigation li:hover {
             background-color: darkgray;
         }
 
@@ -141,6 +168,38 @@
         .card img {
             width: 100%;
             height: 200px;
+        }
+        #houseimage2{
+            width: 49px%;
+            height: 100px;
+        }
+        #airplaneimage2{
+            width: 49%;
+            height: 100px;
+        }
+        #carimage{
+            width: 49%;
+            height: 100px;
+        }
+        #privatebeachimage{
+            width: 49%;
+            height: 100px;
+        }
+        #carimage2{
+            width: 49%;
+            height: 100px;
+        }
+        #houseimage3{
+            width: 49%;
+            height: 100px;
+        }
+        #houseimage{
+            width: 100%;
+            height: 100px;
+        }
+        #airplaneimage{
+            width: 100%;
+            height: 100px;
         }
         .card-content {
             padding: 16px;
