--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <ul class="navigation">
             <a href="index.html"><li class="highlighted">Home</li></a>
-            <a href="Forms.html"><li class="highlighted">Forms</li></a>
+            <a href="Forms.html"><li class="highlighted">Feedback</li></a>
             <a href="Contact2.html"><li class="highlighted">Contact</li></a>
         </ul>
     </div>
