--- a/thirdpgae.html
+++ b/thirdpgae.html
@@ -15,7 +15,7 @@
         </div>
         <ul class="navigation">
             <a href="index.html"><li>Home</li></a>
-            <a href="Forms.html"><li>Forms</li></a>
+            <a href="Forms.html"><li>Feedback</li></a>
             <a href="Contact2.html"><li>Contact</li></a>
         </ul>
     </div>
