--- a/Contact2.html
+++ b/Contact2.html
@@ -5,118 +5,52 @@
     <title>Contact - Costa Rica Blog</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" href="1.jpg" type="image/icon type">
-</head>
-
-<body>
-    <!-- Header -->
-    <div class="header">
-        <div class="inner header">
-            <h1>Costa<span>Rica</span></h1>
-        </div>
-        <ul class="navigation">
-            <a href="index.html"><li>Home</li></a>
-            <a href="Forms.html"><li>Forms</li></a>
-            <a href="Contact2.html"><li>Contact</li></a>
-        </ul>
-    </div>
-
-    <!-- Contact Form -->
-    <div class="contact-form">
-        <h2>Contact Us</h2>
-        <form>
-            <input type="text" name="first" placeholder="First Name" autocomplete="off" required><br>
-            <input type="text" name="last" placeholder="Last Name" autocomplete="off" required><br>
-            <input type="email" name="email" placeholder="Email Address" autocomplete="off" required><br>
-            <textarea name="message" placeholder="Enter your message" rows="5" cols="60" autocomplete="off" required></textarea><br>
-            <button type="submit">Send Message</button>
-        </form>
-    </div>
-
-    <!-- Footer -->
-    <footer>
-        <div class="footer-content">
-            <div class="footer-section about">
-                <h3>Costa Rica Blog</h3>
-                <p>Discover the beauty of Costa Rica through our travel blog, filled with insights, guides, and recommendations.</p>
-                <div class="socials">
-                    <a href="https://www.facebook.com" target="_blank">Facebook</a>
-                    <a href="https://www.instagram.com" target="_blank">Instagram</a>
-                    <a href="https://www.twitter.com" target="_blank">Twitter</a>
-                </div>
-            </div>
-            <div class="footer-section links">
-                <h4>Quick Links</h4>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="Forms.html">Forms</a></li>
-                    <li><a href="Contact2.html">Contact</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                </ul>
-            </div>
-            <div class="footer-section contact">
-                <h4>Contact Info</h4>
-                <ul>
-                    <li>Email: info@costaricablog.com</li>
-                    <li>Phone: +506 123 4567</li>
-                    <li>Address: San José, Costa Rica</li>
-                </ul>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            <p>&copy; 2024 Costa Rica Blog. All Rights Reserved | Designed by CostaRicaDev</p>
-        </div>
-    </footer>
-
     <style>
-        * {
-            background-color: none;
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        h1 {
-            color: white;
-            padding-top: 10px;
-            text-align: center;
-            font-size: 60px;
-            font-family: 'Courier New', Courier, monospace;
-        }
-
+        /* Styling for header */
         .header {
             width: 100%;
-            height: 55px;
+            height: 80px; /* Smaller header height */
             background-color: #101010;
+            color: white;
             display: flex;
             justify-content: space-between;
             align-items: center;
             padding: 0 20px;
+            position: relative; /* Enable positioning for menu */
         }
 
-        .inner header h1 {
-            color: white;
+        .header h1 {
             font-family: 'Courier New', Courier, monospace;
-            font-size: 32px;
+            font-weight: 800;
+            font-size: 45px; /* Smaller text size */
+            margin: 0;
+        }
+
+        .header h1 span {
+            font-size: 50px; /* Slightly larger span for visual interest */
         }
 
         .navigation {
+            position: absolute;
+            bottom: 10px;  /* Position the menu at the bottom of the header */
+            right: 20px;
             display: flex;
-            align-items: center;
-            justify-content: flex-end;
+            gap: 20px; /* space between the links */
         }
 
         .navigation a {
-            color: white;
+            padding: 15px;
+            color: white; /* White text for menu */
             font-family: 'Courier New', Courier, monospace;
-            font-size: 20px;
-            padding: 0 15px;
             text-decoration: none;
+            font-size: 18px;
         }
 
         .navigation a:hover {
-            color: lightgreen;
+            color: lightgreen; /* Hover effect */
         }
 
+        /* Styling for the contact form */
         .contact-form {
             width: 80%;
             margin: 20px auto;
@@ -215,6 +149,68 @@
             color: lightgreen;
         }
     </style>
+</head>
+
+<body>
+
+    <!-- Header -->
+    <div class="header">
+        <div class="logo_container">
+            <h1>Costa<span>Rica</span></h1>
+        </div>
+        <div class="navigation">
+            <a href="index.html">Home</a>
+            <a href="Forms.html">Feedback</a>
+            <a href="Contact2.html">Contact</a>
+        </div>
+    </div>
+
+    <!-- Contact Form -->
+    <div class="contact-form">
+        <h2>Contact Us</h2>
+        <form>
+            <input type="text" name="first" placeholder="First Name" autocomplete="off" required><br>
+            <input type="text" name="last" placeholder="Last Name" autocomplete="off" required><br>
+            <input type="email" name="email" placeholder="Email Address" autocomplete="off" required><br>
+            <textarea name="message" placeholder="Enter your message" rows="5" cols="60" autocomplete="off" required></textarea><br>
+            <button type="submit">Send Message</button>
+        </form>
+    </div>
+
+    <!-- Footer -->
+    <footer>
+        <div class="footer-content">
+            <div class="footer-section about">
+                <h3>Costa Rica Blog</h3>
+                <p>Discover the beauty of Costa Rica through our travel blog, filled with insights, guides, and recommendations.</p>
+                <div class="socials">
+                    <a href="https://www.facebook.com" target="_blank">Facebook</a>
+                    <a href="https://www.instagram.com" target="_blank">Instagram</a>
+                    <a href="https://www.twitter.com" target="_blank">Twitter</a>
+                </div>
+            </div>
+            <div class="footer-section links">
+                <h4>Quick Links</h4>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="Forms.html">Forms</a></li>
+                    <li><a href="Contact2.html">Contact</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                </ul>
+            </div>
+            <div class="footer-section contact">
+                <h4>Contact Info</h4>
+                <ul>
+                    <li>Email: info@costaricablog.com</li>
+                    <li>Phone: +506 123 4567</li>
+                    <li>Address: San José, Costa Rica</li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2024 Costa Rica Blog. All Rights Reserved | Designed by CostaRicaDev</p>
+        </div>
+    </footer>
 
 </body>
 </html>
