--- a/index.html
+++ b/index.html
@@ -111,13 +111,20 @@
         .navigation a:hover {
             color: lightgreen;
         }
-
+        .navigation li {
+            display: inline-block;
+            padding: 10px;
+            color: white;
+            font-weight: bold;
+            background-color: black;
+            border-radius: 5px;
         /* Highlighted Navigation Links */
         .navigation .highlighted {
             background-color: black;
             color: white;
             font-weight: bold;
             border-radius: 5px;
+        }
         }
         .navigation .highlighted:hover {
             background-color: darkgray;
