--- a/gamesnake.html
+++ b/gamesnake.html
@@ -5,8 +5,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Snake Game</title>
   <link rel="stylesheet" href="gamesnake.css">
+  <style>
+    .home-button {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      background-color: #0f0;
+      color: #000;
+      padding: 10px 20px;
+      font-size: 16px;
+      font-weight: bold;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      text-decoration: none;
+    }
+  </style>
 </head>
 <body>
+  <!-- Home button -->
+  <a class="home-button" href="https://johnshijo.github.io/AceDaySFTE120/">Home</a>
+
   <div class="game-container">
     <canvas id="gameCanvas" width="400" height="400"></canvas><br>
     <button id="restartBtn">Restart</button>
